Bug 260645 - [JSC] Baseline JIT IC should not have ability to change stubInfoGPR
Summary: [JSC] Baseline JIT IC should not have ability to change stubInfoGPR
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Yusuke Suzuki
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-08-23 23:20 PDT by Yusuke Suzuki
Modified: 2023-08-24 01:17 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yusuke Suzuki 2023-08-23 23:20:47 PDT
...
Comment 1 Radar WebKit Bug Importer 2023-08-23 23:21:00 PDT
<rdar://problem/114364991>
Comment 2 Yusuke Suzuki 2023-08-23 23:26:22 PDT
Pull request: https://github.com/WebKit/WebKit/pull/17005
Comment 3 EWS 2023-08-24 01:17:14 PDT
Committed 267220@main (51e8e5ed42b6): <https://commits.webkit.org/267220@main>

Reviewed commits have been landed. Closing PR #17005 and removing active labels.